# Elegent

./: .gitignore  README.md  README.md.save
05Service2/devel/: .catkin  local_setup.sh
06Parameter/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
07Actionlib/devel/: .catkin  .rosinstall  setup.sh
08TransForm/devel/: .catkin  local_setup.sh  setup.sh
09littlecar/src/littlecar_description/: package.xml
310embedded/12.1-helloworld/: helloworld
310embedded/12.2-file/: POSIX_file  POSIX_file.c
310embedded/12.3-process/: fork  process.c
310embedded/12.4-thread/: thread.c
310embedded/12.5-timer/: timer.c
310embedded/12.6-tcp/server/: Server_1.c  tcp_server  tcp_server.c
310embedded/12.6-tcp/uclient/: tcp_client
310embedded/12.7-webserver/__Previews/: webserver.cPreview
310embedded/12.8-udp/: user.c
310embedded/12.8-udp/listener/: client  client.c
310embedded/12.8-udp/utalker/: server.c
310embedded/12.9-boa/www/: css.css
310embedded/makefileTest/: A.cpp  A.h  B.cpp  B.h
310embedded/serial/: serial  serial.c
330Qt_WallPaper/src/: desktopwidget.cpp  mainwindow.cpp
340ML-DM/addition/: diabetes_scatter1.html  diabetes_scatter2.html  直接导入：糖尿病预测.ipynb
340ML-DM/dia-5000/: 糖尿病预测（备用）.ipynb
340ML-DM/dia-5000/EDA/: 体重指数.html  出生年份.html  糖尿病家族史.html
340ML-DM/dia-5000/catboost_info/: learn_error.tsv  time_left.tsv
340ML-DM/dia-5000/hist/: 体重指数.html  性别.html  编号.html  舒张压.html
340ML-DM/dia-5000/process_variable/: RFC3  deal_params3  model2  model4  objective  x_test  y_test
340ML-DM/dia-5000/process_variable(reserve)/: lgb_test
340ML-DM/dia-5000/准备数据/: label.csv  num_var.csv  编号.csv
340ML-DM/dia-5000/建模/: rfc7-3-3.pkl
340ML-DM/dia-5000/数据清洗/: totaldf未处理离散值.csv
340ML-DM/dia-5000/预测结果/: rfc-submit7-3.csv
340ML-DM/dia-6000/: PPT-糖尿病遗传风险预测.pptx
340ML-DM/dia-6000/process/: train_feat.csv  train_true_pred.csv
350A_LOAM_WS/: .gitignore
350A_LOAM_WS/src/A-LOAM/: .gitignore  CMakeLists.txt  README.md  package.xml  原README.md
350A_LOAM_WS/src/A-LOAM/launch/: kitti_my.launch
350A_LOAM_WS/src/A-LOAM/src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  scanRegistration.cpp
A-LOAM/: README.md
A-LOAM/include/aloam_velodyne/: tic_toc.h
A-LOAM/src/: laserOdometry.cpp  scanRegistration.cpp
A_LOAM_WS/src/A-LOAM/: CMakeLists.txt  package.xml
ML-DM/: ML-DM-Readme.md
ML-DM/addition/: diabetes_importances_bar.html
ML-DM/dia-5000/: 糖尿病早期遗传风险预测.ipynb
ML-DM/dia-5000/EDA/: 体重指数.html  出生年份.html  口服耐糖量测试.html  性别.html  糖尿病家族史.html  肱三头肌皮褶厚度.html  胰岛素释放实验.html  舒张压.html
ML-DM/dia-5000/catboost_info/: catboost_training.json
ML-DM/dia-5000/hist/: 体重指数.html  出生年份.html  口服耐糖量测试.html  性别.html  编号.html  肱三头肌皮褶厚度.html  胰岛素释放实验.html  舒张压.html
ML-DM/dia-5000/process_variable/: RFC2  RFC3  RFC4  deal_params  deal_params4  model  model2  model3  x_test  x_train  y_test  y_train
ML-DM/dia-5000/process_variable(reserve)/: lgb_train2  xgb_test  xgb_train
ML-DM/dia-5000/准备数据/: object_var.csv
ML-DM/dia-5000/暂存数据(备用)/: TSF.csv  特征衍生_xgb_lgb.csv  逻辑回归.csv
ML-DM/dia-5000/特征工程/: totaldf未处理离散值.csv
ML-DM/dia-5000/预测结果/: cbc-submit7-5.csv  rfc-submit7-3.csv  voting-submit7-5.csv
ML-DM/dia-6000/: 糖尿病.py
ML-DM/dia-6000/process/: hyperglycemia.csv  test_preds.csv
ML-DM/ppt/: exam-info.md
Qt_WallPaper/src/: finddektophwnd.cpp  mainwindow.cpp
ROS/08TransForm/: frames.gv
embedded/12.1-helloworld/: hello  helloworld
embedded/12.2-file/: a.out  file  file.c  linux.txt
embedded/12.3-process/: Cisco1912  Cisco1912.cpp  fork.cpp  process  process.c
embedded/12.4-thread/: CMakeLists.txt  mutex.cpp
embedded/12.5-timer/: timer
embedded/12.6-tcp/server/: server.c
embedded/12.6-tcp/uclient/: tcp_client.c
embedded/12.8-udp/: user  user_1.c
embedded/12.8-udp/listener/: client  client.c  listener
embedded/12.8-udp/utalker/: server  server.c  talker
embedded/makefileTest/: Makefile  helloworld  main.cpp
embedded/serial/: serial
kalibr/: .gitignore
librealsense/: .gitignore
基于机器学习的糖尿病预测/dia-1000/: dia.csv  糖尿病再探索.ipynb
基于机器学习的糖尿病预测/dia-5000/EDA/: 体重指数.html  口服耐糖量测试.html  性别.html  糖尿病家族史.html  肱三头肌皮褶厚度.html  胰岛素释放实验.html  舒张压.html
基于机器学习的糖尿病预测/dia-5000/hist/: 体重指数.html  出生年份.html  口服耐糖量测试.html  性别.html  编号.html  肱三头肌皮褶厚度.html  胰岛素释放实验.html  舒张压.html
基于机器学习的糖尿病预测/dia-5000/process_variable(reserve)/: lgb_test2  lgb_test3  lgb_train  lgb_train3
基于机器学习的糖尿病预测/ppt/: 模型融合.html
(+99 files in other folders)
